# TGPlayer

./: settings.gradle
TGPlayer/: CMakeLists.txt  build.gradle
TGPlayer/src/main/: AndroidManifest.xml
TGPlayer/src/main/cpp/: DecodeAudio.cpp  DecodeAudio.h  DecodeVideo.cpp  DecodeVideo.h  Exception.h  JavaCallHandle.cpp  JavaCallHandle.h  PlayerListenerCall.cpp  PlayerListenerCall.h  PlayerQueue.cpp  PlayerQueue.h  TGAudio.cpp  TGAudio.h  TGPlayer.cpp  TGPlayer.h  TGVideo.cpp  TGVideo.h  tgplayer_jni.cpp
TGPlayer/src/main/cpp/audio/: AudioTrackPlayer.cpp  AudioTrackPlayer.h  BaseAudioPlayer.h  OpenSLESPlayer.cpp  OpenSLESPlayer.h
TGPlayer/src/main/cpp/include/: native_log.h
TGPlayer/src/main/cpp/video/: ANativeWindowRender.cpp  ANativeWindowRender.h  BaseVideoPlayer.cpp  BaseVideoPlayer.h  OpenGLRender.cpp  OpenGLRender.h
TGPlayer/src/main/java/com/aisaka/media/: ITGMediaPlayer.java  Metadata.java  TGPlayer.java
TGPlayer/src/main/java/com/aisaka/media/annotation/: PlayerStatus.java
TGPlayer/src/main/java/com/aisaka/media/utils/: Constants.java
TGPlayer/src/main/res/values/: strings.xml
TGPlayer/src/test/java/com/aisaka/aisakaplayer/: ExampleUnitTest.java
aisakaplayer/: CMakeLists.txt  build.gradle
aisakaplayer/src/androidTest/java/com/aisaka/aisakaplayer/: ExampleInstrumentedTest.java
aisakaplayer/src/main/: AndroidManifest.xml
aisakaplayer/src/main/cpp/: JavaCallHandle.cpp  JavaCallHandle.h  PlayerQueue.cpp  PlayerStatus.h  tgaudio.cpp  tgaudio.h  tgplayer.cpp  tgplayer.h  tgplayer_jni.c  tgplayer_jni.cpp  tgqueue.cpp  tgqueue.h  tgvideo.cpp  tgvideo.h
aisakaplayer/src/main/cpp/include/: audioplayer.h  cmdutils.h  com_aisaka_ffmpegandroid_FFmpegUtil.h  native_log.h
aisakaplayer/src/main/java/com/aisaka/aisakaplayer/: ITGMediaPlayer.java  Metadata.java  TGPlayer.java
aisakaplayer/src/main/java/com/aisaka/aisakaplayer/annotation/: PlayerStatus.java
aisakaplayer/src/main/java/com/aisaka/aisakaplayer/utils/: Constants.java
aisakaplayer/src/main/res/values/: strings.xml
app/: build.gradle
app/src/androidTest/java/com/aisaka/playerdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/aisaka/playerdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/aisaka/playerdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
